--- a/free-apartment-promotion/html-prototype/signup.html
+++ b/free-apartment-promotion/html-prototype/signup.html
@@ -9,10 +9,7 @@
 <body id="sign">
 	<div class="container">
 		<h1>Sign Up</h1>
-		<div class="info" style="
-    margin-left: 35%;
-    margin-top: 24%;
-">
+		<div class="info">
 			<form>
 				<div class="fname">
 				<input id="fname" required type="text" name="fname" placeholder="First name"><span id="fwrongname" class="error">* Please fill out the required field</span>
