--- a/free-apartment-promotion/html-prototype/info.html
+++ b/free-apartment-promotion/html-prototype/info.html
@@ -9,13 +9,7 @@
 	<div>
 		<h1 id="oo">EZ PROPERTIES SWEEPSTAKES</h1>
 	</div>
-	<div><p style="
-	font-size: 12px;
-    margin-top: 33%;
-    width: 65%;
-    margin-left: 20%;
-    color: #222662;
-">Must be a current Wash U student to be eligible for entry.
+	<div><p id="text">Must be a current Wash U student to be eligible for entry.
 
 Entry into the sweepstakes begins April 1, 2018 and ends June 1, 2018. The winner will be announced on June 15, 2018.</p></div>
 	
